--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,8 @@
     <script
       defer
       src="%VITE_ANALYTICS_ENDPOINT%/umami"
-      data-website-id="%VITE_ANALYTICS_WEBSITE_ID%"></script>
+      data-website-id="%VITE_ANALYTICS_WEBSITE_ID%"
+      onerror="console.warn('Analytics script failed to load')"></script>
   </body>
 
 </html>
